--- a/src/main/resources/text_US.properties
+++ b/src/main/resources/text_US.properties
@@ -1,12 +1,36 @@
+#   dialog messages
 WELCOME_MSG=Welcome to the Knight simulator!
 QUESTION_MSG=What do you wanna do with your Knight?
 MAIN_MENU_REQUEST_MSG =Select action:\n 1 - add armor piece\n 2 - add clothing piece\n 3 - get statistics
 CORRECT_DIGITAL_INPUT_MSG =Correct digital input format
 INVALID_DIGITAL_INPUT_MSG =Invalid digital input format
+BODY_PART_SELECTION_MENU_MSG =Select body part to use:
 
 ARMOR_SELECTION_MENU_MSG =Select any armor piece to apply:
 
 MENU_KNIGHT_INVENTORY_DESC =Knight is currently wearing:
 MENU_KNIGHT_INVENTORY_EMPTY =nothing.
+
+#   localised item names
+BackPack =Backpack
+Hat =Hat
+Shoes =Shoes
+Gloves =Gloves
+
+ChestPlate =ChestPlate
+Helmet =Helmet
+Leggins =Leggins
+Boots =Boots
+
+#   localised body parts
+HEAD =Head
+CHEST =Chest
+ARM_L =Left Arm
+ARM_R =Right Arm
+PALM_L =Left Palm
+PALM_R =Right Palm
+FEET_L =Left Feet
+FEET_R =Right Feet
+
 
 
