added clothing/armor loops, refactoring

--- a/src/main/resources/text_US.properties
+++ b/src/main/resources/text_US.properties
@@ -7,9 +7,11 @@ INVALID_DIGITAL_INPUT_MSG =Invalid digital input format
 BODY_PART_SELECTION_MENU_MSG =Select body part to use:
 
 ARMOR_SELECTION_MENU_MSG =Select any armor piece to apply:
+CLOTHING_SELECTION_MENU_MSG =Select any clothing piece to apply:
 
 MENU_KNIGHT_INVENTORY_DESC =Knight is currently wearing:
 MENU_KNIGHT_INVENTORY_EMPTY =nothing.
+MENU_CANNOT_WEAR_ITEM_ON_BODYPART =Cannot wear selected item on designated bart of the body!
 
 #   localised item names
 BackPack =Backpack
@@ -31,6 +33,10 @@ PALM_L =Left Palm
 PALM_R =Right Palm
 FEET_L =Left Feet
 FEET_R =Right Feet
+LEGS =Legs
+
+#   localised words
+WORD_PRICE =Price
 
 
 
