--- a/src/main/resources/text_US.properties
+++ b/src/main/resources/text_US.properties
@@ -1,7 +1,7 @@
 #   dialog messages
 WELCOME_MSG=Welcome to the Knight simulator!
 QUESTION_MSG=What do you wanna do with your Knight?
-MAIN_MENU_REQUEST_MSG =Select action:\n 1 - add armor piece\n 2 - add clothing piece\n 3 - get statistics
+MAIN_MENU_REQUEST_MSG =Select action:\n 1 - add armor piece\n 2 - add clothing piece\n 3 - get statistics\n 4 - Exit
 CORRECT_DIGITAL_INPUT_MSG =Correct digital input format
 INVALID_DIGITAL_INPUT_MSG =Invalid digital input format
 BODY_PART_SELECTION_MENU_MSG =Select body part to use:
@@ -10,8 +10,13 @@ ARMOR_SELECTION_MENU_MSG =Select any armor piece to apply:
 CLOTHING_SELECTION_MENU_MSG =Select any clothing piece to apply:
 
 MENU_KNIGHT_INVENTORY_DESC =Knight is currently wearing:
+MSG_UPPER_BOUND_QUESTION =Enter upper bound of price to search:
+MSG_LOVER_BOUND_QUESTION =Enter lover bound of price to search:
 MENU_KNIGHT_INVENTORY_EMPTY =nothing.
 MENU_CANNOT_WEAR_ITEM_ON_BODYPART =Cannot wear selected item on designated bart of the body!
+MSG_SORTED_ITEMS_SHOW =Showing items, worn by knight, sorted by weight:
+MENU_SHOW_STATISTICS_MSG =Select statistics entry:\n 1 - Get price of worn items\n 2 - Get items sorted by price\n 3 - 
+TOTAL_WORN_PRICE_MSG =Total price of items, worn buy Knight:
 
 #   localised item names
 BackPack =Backpack
@@ -37,6 +42,6 @@ LEGS =Legs
 
 #   localised words
 WORD_PRICE =Price
-
-
+WORD_CLOTHES =Clothes:\t
+WORD_ARMOR =Armor:\t
 
