added some tests

--- a/src/main/resources/text_US.properties
+++ b/src/main/resources/text_US.properties
@@ -15,7 +15,7 @@ MSG_LOVER_BOUND_QUESTION =Enter lover bound of price to search:
 MENU_KNIGHT_INVENTORY_EMPTY =nothing.
 MENU_CANNOT_WEAR_ITEM_ON_BODYPART =Cannot wear selected item on designated bart of the body!
 MSG_SORTED_ITEMS_SHOW =Showing items, worn by knight, sorted by weight:
-MENU_SHOW_STATISTICS_MSG =Select statistics entry:\n 1 - Get price of worn items\n 2 - Get items sorted by price\n 3 - 
+MENU_SHOW_STATISTICS_MSG =Select statistics entry:\n 1 - Get price of worn items\n 2 - Get items sorted by price\n 3 - Select Items in price interval
 TOTAL_WORN_PRICE_MSG =Total price of items, worn buy Knight:
 
 #   localised item names
